[gd_scene load_steps=8 format=3 uid="uid://wg1gs70n7nbo"]

[ext_resource type="Script" path="res://scenes/island/island.gd" id="1_ilmvi"]
[ext_resource type="Texture2D" uid="uid://ce5t31q31kv8a" path="res://assets/sprites/islands/standard-Sheet.png" id="2_lcv0q"]
[ext_resource type="Texture2D" uid="uid://dbgguw131an07" path="res://assets/sprites/misc/hovered_pointer.png" id="4_wo41w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_heug2"]
radius = 58.2409

[sub_resource type="Animation" id="Animation_omlek"]
resource_name = "Hover"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 120), Vector2(0, 123), Vector2(0, 120)]
}

[sub_resource type="Animation" id="Animation_iwbsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ybcko"]
_data = {
"Hover": SubResource("Animation_omlek"),
"RESET": SubResource("Animation_iwbsn")
}

[node name="Island" type="StaticBody2D"]
z_index = 2
input_pickable = true
script = ExtResource("1_ilmvi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("2_lcv0q")
hframes = 4

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 0.454902)
position = Vector2(0, 120)
texture = ExtResource("2_lcv0q")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_heug2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.1
libraries = {
"": SubResource("AnimationLibrary_ybcko")
}

[node name="HoverIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -72)
texture = ExtResource("4_wo41w")

[node name="IconContainer" type="Node2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
